Blocking connections do not clean session input buffer when closed (input data from a read operation may still remain in the buffer if the connection is re-opened)
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1483835 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,11 @@
+Changes since Release 4.3-BETA2 
+-------------------
+
+* Blocking connections do not clean session input buffer when closed (input data from a read
+  operation may still remain in the buffer if the connection is re-opened).
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+
 Release 4.3-BETA2 
 -------------------
 
