--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since Release 4.3-BETA2 
 -------------------
 
+* [HTTPCORE-340] AbstractNIOConnPool to support lease timeout distinct from connect timeout.  
+  Contributed by Ignat Alexeyenko <ignatalexeyenko at gmail.com>
+
 * Blocking connections do not clean session input buffer when closed (input data from a read
   operation may still remain in the buffer if the connection is re-opened).
   Contributed by Oleg Kalnichevski <olegk at apache.org>
