--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,11 @@
+Changes since 4.3
+-------------------
+
+* [HTTPCORE-347] (Regression) HttpResponse#setStatusCode() does not update reason phrase.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+
+
 Release 4.3
 -------------------
 
