HTTPCORE-354: BasicConnFactory don't use SocketConfig#isSoKeepAlive Contributed by David Ignjic <ignjic at gmail.com>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1530869 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since 4.3
 -------------------
 
+* [HTTPCORE-354] BasicConnFactory don't use SocketConfig#isSoKeepAlive.
+  Contributed by David Ignjic <ignjic at gmail.com>
+
 * [HTTPCORE-347] (Regression) HttpResponse#setStatusCode() does not update reason phrase.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
