HTTPCORE-362: Purge pool per route map after closing out expired or idle connections
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1544185 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,10 @@
 Changes since 4.3
 -------------------
 
+* [HTTPCORE-362] Purge pool per route map after closing out expired or idle connections with 
+  #closeExpired and #closeIdle methods. 
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-361] Reduced intermediate garbage in HeaderGroup#getFirstHeader()
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
