Apply IOReactorConfig#getRcvBufSize() value to server sockets open by DefaultListeningIOReactor Contributed by Andreas Veithen <veithen at apache.org>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1544962 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since 4.3
 -------------------
 
+* Apply IOReactorConfig#getRcvBufSize() value to server sockets open by DefaultListeningIOReactor.
+  Contributed by Andreas Veithen <veithen at apache.org>
+
 * [HTTPCORE-357] Avoid DNS lookups in SSLIOSessions in server mode.
   Contributed by Isaac Cruz Ballesteros <icruzbal at gmail.com>
 
