DefaultConnectingIOReactor / DefaultListeningIOReactor do not correctly apply some initial socket settings Contributed by Andreas Veithen <veithen at apache.org>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1545036 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,7 +1,8 @@
 Changes since 4.3
 -------------------
 
-* Apply IOReactorConfig#getRcvBufSize() value to server sockets open by DefaultListeningIOReactor.
+* DefaultConnectingIOReactor / DefaultListeningIOReactor do not correctly apply some initial 
+  socket settings.
   Contributed by Andreas Veithen <veithen at apache.org>
 
 * [HTTPCORE-357] Avoid DNS lookups in SSLIOSessions in server mode.
