HTTPCORE-364: IOSessionImpl.getLocalAddress() creates unnecessary copy of channel
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1545087 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,8 @@
 Changes since 4.3
 -------------------
 
+* [HTTPCORE-364] IOSessionImpl.getLocalAddress() (etc.) creates unnecessary copy of channel
+
 * DefaultConnectingIOReactor / DefaultListeningIOReactor do not correctly apply some initial 
   socket settings.
   Contributed by Andreas Veithen <veithen at apache.org>
