HTTPCORE-367: Reverted revision 1480321: Call #inputReady as long as there is interest in input, decoder is not done and there is buffered session data
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1550666 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,10 @@
 Changes since 4.3
 -------------------
 
+* [HTTPCORE-367] (Regression) Non-blocking connections can enter a tight loop while waiting 
+  for a chunk header split across multiple TCP frames.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-366] Non-blocking SSLIOSession can enter an infinite loop if the underlying
   channel receives incoming data simultaneously with inactivity timeout.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
