--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,7 +1,7 @@
 Release 4.3.1
 -------------------
 
-This maintenance release fixes a number of bugs regressions found since 4.3, mostly in the 
+This maintenance release fixes a number of bugs and regressions found since 4.3, mostly in the 
 NIO transport components. All users of HttpCore 4.3 are advised to upgrade.
 
 Changelog
@@ -16,7 +16,6 @@ Changelog
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
 * [HTTPCORE-364] IOSessionImpl.getLocalAddress() (etc.) creates unnecessary copy of channel
-  Contributed Sebastian Bazley <sebb at apache.org>.
 
 * DefaultConnectingIOReactor / DefaultListeningIOReactor do not correctly apply some initial 
   socket settings.
