HTTPCORE-372: Chunk decoders to throw an I/O exception if data stream is terminated without a closing chunk Contributed by Dmitry Potapov <potapov.d at gmail.com>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1565641 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
-Changes since release 4.3.1
+Changes for release 4.4-alpha1
 -------------------
+
+* [HTTPCORE-372] Blocking and non-blocking chunk decoders to throw an I/O exception if data stream
+  is terminated without a closing chunk.
+  Contributed by Dmitry Potapov <potapov.d at gmail.com>
 
 * [HTTPCORE-368] Customizable buffer management strategies for SSLIOSession.
   Contributed by offbynull <offbynull at gmail.com>
