--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since release 4.3.1
 -------------------
 
+* [HTTPCORE-373] Out of sequence HTTP response causes NPE in HttpAsyncRequestExecutor.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-370] Race condition if connection request succeeds and times out at the same time.  
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
