Update JUnit to version 4.11 from 4.9.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1574509 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -27,7 +27,9 @@ Changes for release 4.4-alpha1
 * (Regression) Fixed synchronization issue in blocking and non-blocking connection pool 
   implementations caused by HTTPCORE-362
   Contributed by Oleg Kalnichevski <olegk at apache.org>
-
+  
+* Update JUnit to version 4.11 from 4.9  
+  Contributed by Gary Gregory <ggregory at apache.org>
 
 
 Release 4.3.1
