HTTPASYNC-77: system resources are not correctly deallocated if I/O reactor is shut down while still inactive (not started)
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1598891 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,10 @@
 Changes for release 4.4-alpha1
 -------------------
 
+* [HTTPASYNC-77] system resources are not correctly deallocated if I/O reactor is shut down
+  while still inactive (not started)
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCORE-377] Allow zero SO_LINGER (immediate abortive close).
   Contributed by Dmitry Potapov <potapov.d at gmail.com>
 
