--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,25 @@
+Release 4.4-BETA1
+-------------------
+
+This is the first BETA release from 4.4 release series. Notable features included in 
+the 4.4 series are:
+
+* Support for pipelined request processing on the server side
+
+* Support for pipelined request execution on the client side
+
+* Simplified bootstrapping of blocking and non-blocking (NIO) HTTP server implementations   
+
+* Inclusion of SSL context initialization utilities from HttpClient
+
+* New HTTP element tokenizer implementation 
+
+
+Please note that as of 4.4 HttpCore requires Java 1.6 or newer.
+
+
+
+
 Release 4.4-ALPHA1
 -------------------
 
