--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 Changes since 4.4
 -----------------
 
+* [HTTPCORE-396]: PrivateKeyStrategy does not work with NIO SSL.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * Non-blocking connection should not trigger end-of-stream callback as long as there is still
   data in the session input buffer. This can cause a series of short pipelined requests to
   fail prematurely in case of an unexpected connection termination by the opposite endpoint. 
