--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,18 @@
+Release 4.4.3
+-------------------
+
+This is a maintenance release that fixes a regression introduced by release 4.4.2.
+
+Please note that as of 4.4 HttpCore requires Java 1.6 or newer.
+
+
+Changelog
+-------------------
+
+* Fixed regression introduced by HTTPCORE-399. 
+
+
+
 Release 4.4.2
 -------------------
 
